--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@ import Jumbotron from './Jumbotron.astro'
 <div id="container">
 	<Header />
 	<Jumbotron />
-	<main>	
+	<main class="mt-10">	
 		<h1>Mas Main</h1>	  
 		<!-- <section id="hero">
 			<a href="https://astro.build"
