--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,8 @@
 <header>
-    <nav class="border-gray-200 bg-[#64656a]">
+  <nav class="border-gray-200 fixed w-full z-20 top-0 start-0 bg-[#64656a]">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="/logo.jpg" class="h-12 rounded" alt="Zoquiapan Logo" />
-              <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Zoquiapan</span> -->
           </a>
           <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
               <span class="sr-only">Open main menu</span>
@@ -13,24 +12,23 @@
           </button>
           <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
             <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
-              <li>
-                <a href="#" class="block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent" aria-current="page">Inicio</a>
+              <li class="p-1 bg-[#c2b99a] rounded">
+                <a href="#" class="block py-2 px-3 md:p-0 text-white  bg-blue-700 rounded md:bg-transparent md:text-slate-800" aria-current="page">Inicio</a>
+              </li> 
+              <li class="p-1 hover:bg-[#c2b99a] rounded">
+                <a href="/ayuntamiento" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
               </li>
-              <li>
-                <a href="/ayuntamiento" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Ayuntamiento</a>
+              <li class="p-1 hover:bg-[#c2b99a] rounded">
+                <a href="/tramites" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
               </li>
-              <li>
-                <a href="/tramites" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Trámites</a>
+              <li class="p-1 hover:bg-[#c2b99a] rounded">
+                <a href="/transparencia" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
               </li>
-              <li>
-                <a href="/transparencia" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Transparencia</a>
-              </li>
-              <li>
-                <a href="contacto" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contacto</a>
+              <li class="p-1 hover:bg-[#c2b99a] rounded">
+                <a href="contacto" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
-</header>
-  
+      </nav> 
+</header> 
