--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -1,4 +1,4 @@
-<section class="bg-cover bg-center bg-no-repeat bg-[url('/bg-jumbotron.jpeg')] bg-slate-500 bg-blend-multiply">
+<section class="mt-16 bg-cover bg-center bg-no-repeat bg-[url('/bg-jumbotron.webp')] bg-gray-500 bg-blend-multiply">
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
             Bienvenidos a nuestro portal
