--- a/src/components/Definition.astro
+++ b/src/components/Definition.astro
@@ -1,28 +1,23 @@
-<section class="flex-row">
-    <div class="h-52 flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 py-4">
-        <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/icon-definition.svg" alt="Zoquiapan">
+<section class="w-full max-w-screen-xl flex flex-col mb-10 px-3">
+    <div class="h-auto flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row hover:bg-gray-100 py-4 px-3">
+        <img class="object-cover w-full rounded-t-lg h-80 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/icon-definition.svg" alt="Zoquiapan">
         <div class="flex flex-col justify-between p-4 leading-normal">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Nuestro municipio: Significado</h5>
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Descubre nuestro municipio: Significado</h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-                Zoquiapan proviene de las voces aztecas: "Zoquitl", lodo, cieno; "atl", agua; y "pan", sobre en ; "En Agua lodosa o cenagosa" Pueblo ubicado en la parte Norte del estado de Puebla.
+                Zoquiapan proviene de las voces aztecas: "Zoquitl", lodo, cieno; "atl", agua; y "pan", sobre en ; "En Agua lodosa o cenagosa" pueblo ubicado en la parte Norte del estado de Puebla.
             </p>
-        </div>
-    </div>
-
-    <hr class="w-8 h-8 mx-auto my-8 bg-gray-200 border-0 rounded md:my-12 dark:bg-gray-700">
-
-    <div class="h-52 flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 py-4">
-        <div class="flex flex-col justify-between p-4 leading-normal">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 Colindancias
             </h5>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-                Al norte: Jonotla
-                Al sur: Nauzontla y Xochitlán de Vicente Suarez
-                Al este: Cuetzalan del Progreso
-                Al Oeste: Zapotitlán de Méndez y Atlequizayán
-            </p>
+            <ul class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <li>Norte: Jonotla</li>
+                <li>Sur: Nauzontla y Xochitlán de Vicente Suarez</li>
+                <li>Este: Cuetzalan del Progreso</li>
+                <li>Oeste: Zapotitlán de Méndez y Atlequizayán</li>
+                <li>
+                    Además tiene un segundo territorio al norte (Amatlán), el cual limita con al Este con Ayotoxco de Guerrero
+                </li>
+            </ul>
         </div>
-        <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/icon-limit.svg" alt="Zoquiapan">
-    </div>     
+    </div>
 </section>
