--- a/src/components/Definition.astro
+++ b/src/components/Definition.astro
@@ -1,6 +1,6 @@
 <section class="w-full max-w-screen-xl flex flex-col mb-10 px-3">
     <div class="h-auto flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row hover:bg-gray-100 py-4 px-3">
-        <img class="object-cover w-full rounded-t-lg h-80 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/icon-definition.svg" alt="Zoquiapan">
+        <img class="object-cover w-auto rounded-t-lg h-80 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/icon-definition.svg" alt="Zoquiapan">
         <div class="flex flex-col justify-between p-4 leading-normal">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Descubre nuestro municipio: Significado</h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
