--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
   <nav class="border-gray-200 fixed w-full z-20 top-0 start-0 bg-[#64656a]">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/logo.jpg" class="h-12 rounded" alt="Zoquiapan Logo" />
+            <img src="/logo.webp" class="h-12 rounded" alt="Zoquiapan Logo" />
           </a>
           <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
               <span class="sr-only">Open main menu</span>
@@ -16,16 +16,16 @@
                 <a href="#" class="block py-2 px-3 md:p-0 text-white  bg-blue-700 rounded md:bg-transparent md:text-slate-800" aria-current="page">Inicio</a>
               </li> 
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="/ayuntamiento" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
+                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="/tramites" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
+                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="/transparencia" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
+                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="contacto" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
+                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
               </li>
             </ul>
           </div>
