--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,16 @@ import Layout from '../layouts/Layout.astro';
 import Definition from '../components/Definition.astro';
 import Header from '../components/Header.astro';
 import Jumbotron from '../components/Jumbotron.astro';
+import Cards from '../components/Cards.astro';
 import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
 	<Header />
 	<Jumbotron />
-	<main class="mt-24 w-full">	
+	<main class="mt-24 w-full flex flex-col items-center">	
 		<Definition />
+		<Cards />
 	</main> 
 	<Footer />
 </Layout>
