--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,19 +13,19 @@
           <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
             <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
               <li class="p-1 bg-[#c2b99a] rounded">
-                <a href="#" class="block py-2 px-3 md:p-0 text-white  bg-blue-700 rounded md:bg-transparent md:text-slate-800" aria-current="page">Inicio</a>
+                <a href="/" class="block py-2 px-3 md:p-0 text-white  bg-blue-700 rounded md:bg-transparent md:text-slate-800" aria-current="page">Inicio</a>
               </li> 
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
+                <a href="#Ayuntamiento" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
+                <a href="#Tramites" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
+                <a href="#Transparencia" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
+                <a href="#Contacto" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
               </li>
             </ul>
           </div>
