--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -1,6 +1,6 @@
-<section class="bg-white dark:bg-gray-900 bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/hero-pattern.svg')] dark:bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/hero-pattern-dark.svg')]">
+<section class="bg-white bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/hero-pattern.svg')]">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 z-10 relative">
-        <p class="mb-16 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-200">
+        <p class="mb-16 text-lg font-normal text-gray-600 lg:text-xl sm:px-16 lg:px-48">
             Facilitamos el acceso a todos los servicios y trámites que necesitas. Descubre cómo podemos ayudarte a realizar tus gestiones de manera rápida y eficiente.
         </p>
         <div class="flex flex-col md:flex-row justify-around">
@@ -9,18 +9,18 @@
                     <g fill="none" stroke="#666666" stroke-linecap="round" stroke-linejoin="round"><path d="M.707 13.438h12.75M3.86 5.687l3.222-2.53l3.222 2.53M4.35 7.813h5.464v5.625H4.35V7.811ZM3.238 5.688h7.688v2.121H3.238zM1.618 7.81v5.628M12.546 7.81v5.625M.707 7.81h12.75M7.082 3.156V.674m0 0h1.25"/><path d="M6.095 11.203a.93.93 0 0 1 .931-.93v0a.93.93 0 0 1 .931.93v2.235H6.095z"/></g>
                 </svg>
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Ayuntamiento</h5>
+                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Ayuntamiento</h5>
                 </a>
-                <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">Información sobre la administración municipal</p>
+                <p class="mb-3 font-normal text-gray-600">Información sobre la administración municipal</p>
             </div>
             <div class="w-full md:max-w-sm p-6 bg-gray-100 border border-gray-200 rounded-lg shadow m-0 md:ms-3 mt-5 md:mt-0">
                 <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24">
                     <path fill="#666666" d="M9 13h6q.425 0 .713-.288T16 12t-.288-.712T15 11H9q-.425 0-.712.288T8 12t.288.713T9 13m0 3h6q.425 0 .713-.288T16 15t-.288-.712T15 14H9q-.425 0-.712.288T8 15t.288.713T9 16m0 3h3q.425 0 .713-.288T13 18t-.288-.712T12 17H9q-.425 0-.712.288T8 18t.288.713T9 19m-3 3q-.825 0-1.412-.587T4 20V4q0-.825.588-1.412T6 2h7.175q.4 0 .763.15t.637.425l4.85 4.85q.275.275.425.638t.15.762V20q0 .825-.587 1.413T18 22zM18 9h-3.5q-.625 0-1.062-.437T13 7.5V4H6v16h12zM6 4v5zv16z"/>
                 </svg>
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Trámites</h5>
+                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Trámites</h5>
                 </a>
-                <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">Accede a todos los trámites y servicios municipales</p>
+                <p class="mb-3 font-normal text-gray-600">Accede a todos los trámites y servicios municipales</p>
             </div>
 
             <div class="w-full md:max-w-sm p-6 bg-gray-100 border border-gray-200 rounded-lg shadow m-0 md:ms-3 mt-5 md:mt-0">
@@ -28,9 +28,9 @@
                     <g fill="none" stroke="#666666" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87m-3-12a4 4 0 0 1 0 7.75"/></g>
                 </svg>
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Transparencia</h5>
+                    <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Transparencia</h5>
                 </a>
-                <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">Acceso a la información pública municipal</p>
+                <p class="mb-3 font-normal text-gray-600">Acceso a la información pública municipal</p>
             </div>
 
         </div>
