modificaciones en texto de bienvenida y enlaces en las tarjetas

--- a/src/components/Jumbotron.astro
+++ b/src/components/Jumbotron.astro
@@ -1,10 +1,10 @@
 <section class="mt-16 bg-cover bg-center bg-no-repeat bg-[url('/bg-jumbotron.webp')] bg-gray-500 bg-blend-multiply">
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
-            Bienvenidos a nuestro portal
+            ¡Tu Portal Municipal de Zoquiapan!
         </h1>
         <p class="mb-8 text-lg font-normal text-slate-300 lg:text-xl sm:px-16 lg:px-48">
-            Descubra los beneficios que tu comunidad te ofrece.
+            Estamos aquí para servirte. Encuentra toda la información, trámites y servicios que necesitas para hacer de nuestra comunidad un mejor lugar para todos.
         </p>
     </div>
 </section>
