actualizaciones en estilos del footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,30 +3,36 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href="/" class="flex items-center">
-                  <img src="/logo.webp" class="h-8 me-3" alt="Zoquiapan" />
+                  <img src="/logo.webp" class="h-8 me-3 rounded" alt="Zoquiapan" />
                   <span class="self-center text-2xl font-semibold whitespace-nowra text-white">H. Ayuntamiento de Zoquiapan</span>
               </a>
           </div>
-          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+          <div class="grid  md:grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
               <div>
-                  <h2 class="mb-6 text-sm font-semibold uppercase text-white">Resources</h2>
+                  <h2 class="mb-6 text-sm font-semibold uppercase text-white">Contacto</h2>
                   <ul class="text-white font-medium">
-                      <li class="mb-4">
-                          <a href="https://flowbite.com/" class="hover:underline">Flowbite</a>
+                      <li class="mb-4 flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24">
+                                <path fill="none" stroke="#F2F2F2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5L15 13l5 2v4a2 2 0 0 1-2 2A16 16 0 0 1 3 6a2 2 0 0 1 2-2"/>
+                            </svg>
+                            <span class="ms-2">123 456 7890</span>
                       </li>
-                      <li>
-                          <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+                      <li class="flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24">
+                            <g fill="none" stroke="#F2F2F2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path stroke-dasharray="64" stroke-dashoffset="64" d="M4 5h16c0.55 0 1 0.45 1 1v12c0 0.55 -0.45 1 -1 1h-16c-0.55 0 -1 -0.45 -1 -1v-12c0 -0.55 0.45 -1 1 -1Z"><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.6s" values="64;0"/></path><path stroke-dasharray="24" stroke-dashoffset="24" d="M3 6.5l9 5.5l9 -5.5"><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.6s" dur="0.2s" values="24;0"/></path></g>
+                        </svg>
+                        <a href="mailto:correo@gmail.com" class="ms-2">correo@gmail.com</a>
                       </li>
                   </ul>
               </div>
               <div>
-                  <h2 class="mb-6 text-sm font-semibold uppercase text-white">Follow us</h2>
+                  <h2 class="mb-6 text-sm font-semibold uppercase text-white">Atención ciudadana</h2>
                   <ul class="text-white font-medium">
-                      <li class="mb-4">
-                          <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Github</a>
-                      </li>
-                      <li>
-                          <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
+                      <li class="flex mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24">
+                            <path fill="#F2F2F2" d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8s-8-3.589-8-8s3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2m3.8 13.4L13 11.667V7h-2v5.333l3.2 4.266z"/>
+                        </svg>
+                            <span class="ms-2">Lunes a Viernes de 8:00 a.m - 04:00 pm</a>
                       </li>
                   </ul>
               </div>
@@ -34,7 +40,7 @@
       </div>
       <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
       <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-white sm:text-center">© 2024 <a href="https://flowbite.com/" class="hover:underline">Zoquiapan™</a>. Casi todos los derechos reservados.
+          <span class="text-sm text-white sm:text-center">© 2024 <a href="/" class="hover:underline">Zoquiapan™</a>. Casi todos los derechos reservados.
           </span>
           <div class="flex mt-4 sm:justify-center sm:mt-0">
               <a href="https://www.facebook.com/" class="text-white hover:text-gray-900">
