--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,28 +4,36 @@
           <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="/logo.webp" class="h-12 rounded" alt="Zoquiapan Logo" />
           </a>
-          <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-solid-bg" aria-expanded="false">
+          <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-solid-bg" aria-expanded="false">
               <span class="sr-only">Open main menu</span>
               <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
               </svg>
           </button>
           <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
-            <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
+            <ul class="flex flex-col font-medium mt-4 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
               <li class="p-1 bg-[#c2b99a] rounded">
-                <a href="/" class="block py-2 px-3 md:p-0 text-white  bg-blue-700 rounded md:bg-transparent md:text-slate-800" aria-current="page">Inicio</a>
+                <a href="/" class="block py-2 px-3 md:p-0 text-slate-800 rounded md:bg-transparent" aria-current="page">Inicio</a>
               </li> 
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#Ayuntamiento" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Ayuntamiento</a>
+                <a href="#Ayuntamiento" class="block py-2 px-3 md:p-0 text-white md:hover:bg-transparent md:border-0 hover:text-slate-800">
+                  Ayuntamiento
+                </a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#Tramites" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Trámites</a>
+                <a href="#Tramites" class="block py-2 px-3 md:p-0 text-white md:hover:bg-transparent md:border-0 hover:text-slate-800">
+                  Trámites
+                </a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#Transparencia" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Transparencia</a>
+                <a href="#Transparencia" class="block py-2 px-3 md:p-0 text-white md:hover:bg-transparent md:border-0 hover:text-slate-800">
+                  Transparencia
+                </a>
               </li>
               <li class="p-1 hover:bg-[#c2b99a] rounded">
-                <a href="#Contacto" class="block py-2 px-3 md:p-0 text-gray-900 md:text-white hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-slate-800">Contacto</a>
+                <a href="#Contacto" class="block py-2 px-3 md:p-0 text-white md:hover:bg-transparent md:border-0 hover:text-slate-800">
+                  Contacto
+                </a>
               </li>
             </ul>
           </div>
